--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.2"
 
 services:
   web:
-    image: anoop/counter-demo
+    image: anoop/counter-demo:${version:-latest}
     deploy:
       replicas: 10
     ports:
