Multistage build works with template. Made dupe file a symlink

--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -1,13 +1,1 @@
-FROM golang:alpine AS builder
-COPY src/demo.go /go/
-RUN apk update && apk add git && \
-# need git installed to run 'go get' on github
-    go get github.com/garyburd/redigo/redis && \
-# statically compile demo.go with all libraries built in
-    CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o app .
-
-
-FROM scratch
-COPY --from=builder /go/app /app
-EXPOSE 8080
-CMD ["/app"]
+Dockerfile
