--- a/Dockerfile.part1
+++ b/Dockerfile.part1
@@ -1,10 +1,11 @@
 FROM golang:alpine
-COPY src/demo.go /go/
+COPY src/demo.go /go/src
+COPY src/tmpl/demo.html /go/tmpl/
 RUN apk update && apk add git && \
 # need git installed to run 'go get' on github
     go get github.com/garyburd/redigo/redis && \
 # statically compile demo.go with all libraries built in
-    CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o app .
+    CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o app /go/src/demo.go
 
 # The lines below are from part2 & are not necessary. 
 # They are added merely to make this image (part1) useful to run by itself.
