Added instructions for CMD

--- a/Dockerfile.part1
+++ b/Dockerfile.part1
@@ -7,7 +7,7 @@ RUN apk update && apk add git && \
 # statically compile demo.go with all libraries built in
     CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o app /go/src/demo.go
 
-# The lines below are from part2 & are not necessary. 
+# The lines below are from Dockerfile.part2 & are not really necessary here. 
 # They are added merely to make this image (part1) useful to run by itself.
 EXPOSE 8080
 CMD ["/go/app"]
