Added automation & testing scripts

--- a/Dockerfile.part2
+++ b/Dockerfile.part2
@@ -1,5 +1,5 @@
 FROM scratch
 COPY app /app
-COPY tmpl/demo.html /tmpl/demo.html
+COPY src/tmpl/demo.html /tmpl/demo.html
 EXPOSE 8080
 CMD ["/app"]
