--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,13 @@ services:
       ENVIRONMENT: ${env:-PRODUCTION}
     deploy:
       replicas: 10
+#     labels:
+#       com.docker.ucp.mesh.http: "external_route=http://applb-qxbxiw4ztbtve.eastus.cloudapp.azure.com,internal_port=8080"
     ports:
       - "8080"
     networks:
       - dubdub
+#     - ucp-hrm
 
   db:
     image: redis:${redis-version:-latest}
@@ -20,6 +23,8 @@ services:
       dubdub:
 
 networks:
+# ucp-hrm:
+#   external: true
   dubdub:
     driver: overlay
 
