--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.2"
 
 services:
   web:
-    image: ${dockerid:-anoop}/caddy:${version:-latest}
+    image: ${dockerid:-anoop}/caddy:${caddy-version:-latest}
     deploy:
       replicas: 10
 #     labels:
