--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.2"
 services:
   web:
     image: ${dockerid:-anoop}/caddy:${caddy-version:-latest}
+    environment:
+      app_url: app:8080
     deploy:
       replicas: 10
 #     labels:
