--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,6 +1,8 @@
 localhost:2015
+ext .html .htm
+templates
 proxy / {$app_url} {
-  policy least_conn
-  except /home.html
+  policy round_robin
+  except /home /home.html
 }
 tls off
