--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
       app_url: app:8080
     deploy:
       replicas: 10
-#     labels:
-#       com.docker.ucp.mesh.http: "external_route=http://applb-qxbxiw4ztbtve.eastus.cloudapp.azure.com,internal_port=2015"
+      labels:
+        com.docker.ucp.mesh.http: "external_route=http://app.noop.ga,internal_port=2015"
     ports:
       - "2015"
     networks:
       - frontend
-#     - ucp-hrm
+      - ucp-hrm
  
   app:
     image: ${dockerid:-anoop}/counter-demo:${version:-latest}
@@ -34,8 +34,8 @@ services:
       backend:
 
 networks:
-# ucp-hrm:
-#   external: true
+  ucp-hrm:
+    external: true
   frontend:
     driver: overlay
   backend:
