--- a/Dockerfile.part1
+++ b/Dockerfile.part1
@@ -4,6 +4,7 @@ COPY src/tmpl/demo.html /go/tmpl/
 RUN apk update && apk add git && \
 # need git installed to run 'go get' on github
     go get github.com/garyburd/redigo/redis && \
+    go get github.com/gorilla/websocket && \
 # statically compile demo.go with all libraries built in
     CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o app /go/src/demo.go
 
