--- a/webserver/Caddyfile
+++ b/webserver/Caddyfile
@@ -1,7 +1,7 @@
 0.0.0.0:2015
 ext .html .htm
 templates
-proxy / app:8080 {
+proxy / {$app_url} {
   websocket
   policy round_robin
   except /home /home.html
