DOMAIN env variable can now be used to set the value for com.docker.lb.hosts

--- a/interlock-docker-compose.yml
+++ b/interlock-docker-compose.yml
@@ -8,7 +8,7 @@ services:
     deploy:
       replicas: 2
       labels:
-        com.docker.lb.hosts: app.noop.ga
+        com.docker.lb.hosts: ${DOMAIN:-app.noop.ga}
         com.docker.lb.port: 2015
         com.docker.lb.websocket_endpoints: /total
     networks:
