--- a/interlock-docker-compose.yml
+++ b/interlock-docker-compose.yml
@@ -1,21 +1,21 @@
-version: "3.2"
+version: "3.3"
 
 services:
   web:
-    image: ${dockerid:-anoop}/webserver:${webserver-version:-latest}
+    image: dockersuccess/webserver:latest
     environment:
       app_url: app:8080
     deploy:
       replicas: 2
       labels:
-        com.docker.lb.hosts: ${DOMAIN:-app.noop.ga}
+        com.docker.lb.hosts: ${DOMAIN:-app.dockerdemos.com}
         com.docker.lb.port: 2015
         com.docker.lb.websocket_endpoints: /total
     networks:
       - frontend
  
   app:
-    image: ${dockerid:-anoop}/counter-demo:${version:-latest}
+    image: dockersuccess/counter-demo:latest
     environment:
       ENVIRONMENT: ${env:-PRODUCTION}
     deploy:
@@ -26,7 +26,7 @@ services:
       - backend
 
   db:
-    image: redis:${redis-version:-latest}
+    image: redis:latest
     volumes:
       - data:/data
     networks:
