--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     image: ${dockerid:-anoop}/counter-demo:${version:-onbuild}
     environment:
       ENVIRONMENT: ${env:-PRODUCTION}
+      CONTEXT: ${context:-nikki}
     deploy:
       replicas: 1
       endpoint_mode: dnsrr
