Added missing CONTEXT env variable to define the context path to reach the app

--- a/k8s/app.yaml
+++ b/k8s/app.yaml
@@ -37,6 +37,8 @@ spec:
         env:
         - name: ENVIRONMENT
           value: Kubernetes
+        - name: CONTEXT
+          value: demo
         ports:
         - containerPort: 8080
           name: counter-demo
