Update deployment apiVersion from apps/v1beta to apps/v1

--- a/k8s/app.yaml
+++ b/k8s/app.yaml
@@ -11,7 +11,7 @@ spec:
     app: counter-demo
     tier: app
 ---
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app
